--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.5.5"
   }
 }
