--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,36 @@
+###OSX###
+
 .DS_Store
-.git
-node_modules
-dist
+.AppleDouble
+.LSOverride
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+
+###Node###
+
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
 npm-debug.log
+node_modules
+
+.git
+dist
