--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "prod": "webpack -p"
+    "prod": "webpack -p",
+    "postinstall": "cd functions && npm install",
+    "deploy": "npm run prod && firebase deploy"
   },
   "author": "",
   "license": "ISC",
