--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
-    "dotenv": "^4.0.0",
-    "firebase": "^4.3.0",
-    "firebase-admin": "~5.2.1",
-    "firebase-functions": "^0.6.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.2.2",
-    "express": "^4.15.4",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
-    "morgan": "^1.8.2"
+    "dotenv": "^4.0.0",
+    "express": "^4.15.4",
+    "firebase": "^4.3.0",
+    "firebase-admin": "~5.2.1",
+    "firebase-functions": "^0.6.3",
+    "morgan": "^1.8.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
+    "semantic-ui-less": "^2.2.12",
+    "semantic-ui-react": "^0.72.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
@@ -33,8 +35,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
