--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server",
     "prod": "webpack -p",
-    "serve": "webpack -d --watch & firebase serve",
+    "serve": "webpack -d --watch & firebase serve --only functions,hosting",
     "postinstall": "cd functions && npm install",
     "deploy": "npm run prod && firebase deploy"
   },
