--- a/functions/package.json
+++ b/functions/package.json
@@ -2,10 +2,13 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "firebase-admin": "~5.2.1",
-    "firebase-functions": "^0.6.3"
+    "firebase-functions": "^0.6.3",
+    "morgan": "^1.8.2",
+    "path": "^0.12.7"
   },
   "private": true
 }
