--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
+    "request": "^2.81.0",
     "semantic-ui-less": "^2.2.12",
     "semantic-ui-react": "^0.72.0"
   },
