Update gitignore not to save .env variables

--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,12 @@ results
 
 npm-debug.log
 node_modules
-api-config/foursquare-config.js
 package-lock.json
 
 .git
 dist
+
+###Secrets###
+.env
 firebase.js
+api-config/foursquare-config.js
