Add React-Redux, Redux, Lodash, Prettier, Repo and Description

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "nibl",
   "version": "1.0.0",
-  "description": "",
+  "description": "nibl",
   "main": "index.js",
+  "repository": "https://github.com/oreo-dippers/nibl",
   "scripts": {
     "dev": "webpack-dev-server",
     "prod": "NODE_ENV=production webpack -p",
@@ -24,6 +25,7 @@
     "firebase": "^4.3.0",
     "firebase-admin": "~5.2.1",
     "firebase-functions": "^0.6.3",
+    "lodash-es": "^4.17.4",
     "morgan": "^1.8.2",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
@@ -31,7 +33,9 @@
     "react-background-image-loader": "0.0.5",
     "react-dom": "^15.6.1",
     "react-rating": "^0.8.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "request": "^2.81.0",
     "semantic-ui-react": "^0.72.0",
     "sequelize": "^4.8.2"
@@ -51,7 +55,7 @@
     "eslint-loader": "1.7.1",
     "eslint-plugin-flow": "2.29.1",
     "eslint-plugin-flowtype": "2.33.0",
-    "eslint-plugin-import": "2.3.0",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-prettier": "2.1.1",
     "eslint-plugin-react": "7.0.1",
@@ -62,6 +66,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "node-sass": "^4.5.3",
+    "prettier": "^1.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
