integrated firebase cloud storage, got url from user, edited components to display full screen background

--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "firebase": "^4.3.0",
     "firebase-admin": "~5.2.1",
     "firebase-functions": "^0.6.3",
-    "lodash-es": "^4.17.4",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "lodash-es": "^4.17.4",
     "morgan": "^1.8.2",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
