--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,10 @@
     "firebase-admin": "~5.2.1",
     "firebase-functions": "^0.6.3",
     "morgan": "^1.8.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^7.3.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.8.3"
   },
   "private": true
 }
