--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prod": "NODE_ENV=production webpack -p",
     "clean": "rimraf ./dist/*",
     "serve": "webpack -d --watch & firebase serve --only functions,hosting",
-    "express": "npm run dev & nodemon server/server.js",
+    "express": "nodemon server/server.js",
     "postinstall": "cd functions && npm install",
     "deploy": "npm run prod && firebase deploy"
   },
@@ -25,6 +25,7 @@
     "firebase": "^4.3.0",
     "firebase-admin": "~5.2.1",
     "firebase-functions": "^0.6.3",
+    "history": "^4.7.2",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "lodash-es": "^4.17.4",
@@ -38,6 +39,7 @@
     "react-rating": "^0.8.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "request": "^2.81.0",
     "semantic-ui-react": "^0.72.0",
