Route to Comment Card

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server",
     "prod": "NODE_ENV=production webpack -p",
     "clean": "rimraf ./dist/*",
-    "serve": "webpack -d --watch & firebase serve --only functions,hosting",
+    "serve": "firebase serve --only functions,hosting",
     "express": "nodemon server/server.js",
     "postinstall": "cd functions && npm install",
     "deploy": "npm run prod && firebase deploy"
