--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "semantic-ui-react": "^0.72.0",
     "sequelize": "^4.8.2"
   },
