--- a/functions/package.json
+++ b/functions/package.json
@@ -11,6 +11,7 @@
     "path": "^0.12.7",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
+    "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "sequelize": "^4.8.3"
   },
