Stage Process.Env.NODE_ENV For Production and Development

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "repository": "https://github.com/oreo-dippers/nibl",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "dev": "NODE_ENV=development webpack-dev-server",
     "prod": "NODE_ENV=production webpack -p",
     "clean": "rimraf ./dist/*",
-    "serve": "firebase serve --only functions,hosting",
+    "serve": "NODE_ENV=development firebase serve --only functions,hosting",
     "express": "nodemon server/server.js",
     "postinstall": "cd functions && npm install",
-    "deploy": "npm run prod && firebase deploy"
+    "deploy": "NODE_ENV=production npm run prod && firebase deploy"
   },
   "author": "",
   "license": "ISC",
