--- a/functions/package.json
+++ b/functions/package.json
@@ -1,12 +1,16 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "firebase-admin": "~5.2.1",
     "firebase-functions": "^0.6.3",
+    "jest": "^21.1.0",
     "morgan": "^1.8.2",
     "path": "^0.12.7",
     "pg": "^6.4.2",
