--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "lodash-es": "^4.17.4",
+    "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-background-image-loader": "0.0.5",
