--- a/package.json
+++ b/package.json
@@ -17,29 +17,29 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
-    "bluebird": "^3.5.0",
+    "bluebird": "^3.5.1",
     "dotenv": "^4.0.0",
-    "firebase": "^4.3.0",
+    "firebase": "^4.9.1",
     "firebase-admin": "~5.2.1",
-    "firebase-functions": "^0.6.3",
+    "firebase-functions": "^0.8.1",
     "history": "^4.7.2",
-    "jest": "^21.1.0",
-    "jquery": "^3.2.1",
+    "jest": "^21.2.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.4",
     "lodash-es": "^4.17.4",
-    "moment": "^2.18.1",
-    "morgan": "^1.8.2",
-    "react": "^15.6.1",
+    "moment": "^2.20.1",
+    "morgan": "^1.9.0",
+    "react": "^15.6.2",
     "react-background-image-loader": "0.0.5",
-    "react-dom": "^15.6.1",
+    "react-dom": "^15.6.2",
     "react-file-input": "^0.2.5",
     "react-rating": "^0.8.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.6",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
-    "request": "^2.81.0",
-    "request-promise": "^4.2.1",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "semantic-ui-react": "^0.72.0"
   },
   "devDependencies": {
@@ -47,9 +47,11 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.7",
+    "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.9",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "15.0.1",
     "eslint-config-prettier": "2.1.1",
@@ -57,7 +59,7 @@
     "eslint-loader": "1.7.1",
     "eslint-plugin-flow": "2.29.1",
     "eslint-plugin-flowtype": "2.33.0",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-prettier": "2.1.1",
     "eslint-plugin-react": "7.0.1",
@@ -65,14 +67,14 @@
     "file-loader": "^0.11.2",
     "flow-bin": "0.47.0",
     "html-webpack-plugin": "^2.30.1",
-    "less": "^2.7.2",
+    "less": "^2.7.3",
     "less-loader": "^4.0.5",
-    "node-sass": "^4.5.3",
-    "prettier": "^1.6.1",
+    "node-sass": "^4.7.2",
+    "prettier": "^1.10.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
